--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ sidebar_tags:        [blog]
 exclude:             [vendor]
 
 # Fallback image and color if not overwritten for tag or post
-image:               /public/img/marbledpage.jpg
+#image:               /public/img/marbledpage.jpg
+image:               /public/img/sool.jpg
 color:               '#A85641'
 
 # Fonts
