--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,7 +24,7 @@ kimminji:
   name:           Kim Minji
   position:       Project Coordinator, Sound Editor
   year:           [2019]
-  avatar:         /public/img/alexisvaneyken.jpg
+  avatar:         /public/img/person.jpg
   bio:            "Kim Minji is a ..."
 
 leekyungil:
