--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -32,7 +32,7 @@ leekyungil:
   position:       Research Coordinator
   year:           [2019]
   avatar:         /public/img/person.jpg
-  bio:            "Lee Kyungil is a ..."on."
+  bio:            "Lee Kyungil is a ..."
 
 leehyunkyu:
   name:           Lee Hyunkyu
@@ -40,4 +40,3 @@ leehyunkyu:
   year:           [2019]
   avatar:         /public/img/person.jpg
   bio:            "Lee Hyunkyu is a ..."on."
-  
