--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -39,4 +39,4 @@ leehyunkyu:
   position:       Research Coordinator
   year:           [2019]
   avatar:         /public/img/person.jpg
-  bio:            "Lee Hyunkyu is a ..."on."
+  bio:            "Lee Hyunkyu is a ..."
