--- a/_config.yml
+++ b/_config.yml
@@ -56,9 +56,9 @@ author:
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    github:          pushdown99
-    twitter:         pushdown99
-    facebook:        pushdown99
+    # github:          pushdown99
+    # twitter:         pushdown99
+    # facebook:        pushdown99
     # google:          _number_
     # vk:              _username_
     # youtube:         _string___string___string_
@@ -93,10 +93,10 @@ author:
     # paypal:          _username_
 
 # Remove to disable Google Anaylics
-google_analytics_id: 'UA-84025722-2'
+google_analytics_id: 'UA-27086121-10'
 
 # Setting a disqus subdomain will enable the comment section
-disqus:            earlynovels
+disqus:            soolonline
 
 kramdown:
   math_engine:       mathjax
