--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ color:               '#A85641'
 
 # Fonts
 font_heading:                '"NanumBarunGothic-YetHangul", PT Serif", Georgia, serif'
-font:                '"PT Serif", Georgia, serif'
-font_accent:         '"Roboto Slab", "PT Serif", Georgia, serif'
+font:                '"NanumBarunGothic-YetHangul",'"PT Serif", Georgia, serif'
+font_accent:         '"NanumBarunGothic-YetHangul",'"Roboto Slab", "PT Serif", Georgia, serif'
 load_google_fonts:   'Roboto+Slab:700|PT+Serif:400,400italic,700,700italic'
 
 # About yourself
