--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ color:               '#A85641'
 # Fonts
 font_heading:        '"PT Serif", Georgia, serif'
 font:                '"PT Serif", Georgia, serif'
-font_accent:         '"NanumBarunGothic-YetHangul", "Roboto Slab", "PT Serif", Georgia, serif'
+font_accent:         '"NanumMyeongjo-YetHangul", "Roboto Slab", "PT Serif", Georgia, serif'
 load_google_fonts:   'Roboto+Slab:700|PT+Serif:400,400italic,700,700italic'
 
 # About yourself
