--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ image:               /public/img/sool.jpg
 color:               '#A85641'
 
 # Fonts
-font:                '"NanumMyeongjo-YetHangul", "PT Serif", Georgia, serif'
+font:                '"PT Serif", Georgia, serif'
 font_accent:         '"NanumMyeongjo-YetHangul", "Roboto Slab", "PT Serif", Georgia, serif'
 load_google_fonts:   'Roboto+Slab:700|PT+Serif:400,400italic,700,700italic'
 
