--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ paginate_path:       '/page-:num/'
 
 # Markdown enabled, however don't use more than one paragraph (enforced by `>`)
 description:         >
-  Korean traditional liquor.
+  우리술 연구모임  
 
 # The tags listed as entries in the sidebar
 sidebar_tags:        [blog]
