--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url:                 'https://soolonline.github.io'
 baseurl:             'https://soolonline.github.io'
 # baseurl:             /hydejack
 
-title:               '忽然히 늘근 사 보라 오니  미러니 차와 수울와 머구메 내 近閒앳 그를 외오고라'
+title:               '수으리 므겁고 고지 얫도다'
 
 # Pagination
 paginate:            5
